--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       animation: fadeInUp 0.25s ease-out;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4786799419257268"
+     crossorigin="anonymous"></script>
 </head>
 <body class="min-h-screen flex justify-center items-stretch p-4">
 
@@ -672,3 +674,4 @@
   </script>
 </body>
 </html>
+
