--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_1"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -72,7 +72,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+              data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_2"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -84,7 +84,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_3"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -103,7 +103,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-3 h-24 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_4"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -258,7 +258,7 @@
             <div class="bg-white rounded-xl shadow-sm border border-gray-200 p-3 h-24 flex items-center justify-center mb-2">
               <ins class="adsbygoogle"
                    style="display:block"
-                   data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+                   data-ad-client="ca-pub-4786799419257268"
                    data-ad-slot="YOUR_SLOT_ID_5"
                    data-ad-format="auto"
                    data-full-width-responsive="true"></ins>
@@ -348,7 +348,7 @@
             <div class="bg-white rounded-xl shadow-sm border border-gray-200 p-3 h-24 flex items-center justify-center">
               <ins class="adsbygoogle"
                    style="display:block"
-                   data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+                   data-ad-client="ca-pub-4786799419257268"
                    data-ad-slot="YOUR_SLOT_ID_6"
                    data-ad-format="auto"
                    data-full-width-responsive="true"></ins>
@@ -385,7 +385,7 @@
             <div class="bg-white rounded-xl shadow-sm border border-gray-200 p-3 h-24 flex items-center justify-center">
               <ins class="adsbygoogle"
                    style="display:block"
-                   data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+                   data-ad-client="ca-pub-4786799419257268"
                    data-ad-slot="YOUR_SLOT_ID_7"
                    data-ad-format="auto"
                    data-full-width-responsive="true"></ins>
@@ -405,7 +405,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_8"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -417,7 +417,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_9"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -429,7 +429,7 @@
         <div class="bg-white rounded-xl shadow-md border border-gray-200 p-2 h-64 flex items-center justify-center">
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+               data-ad-client="ca-pub-4786799419257268"
                data-ad-slot="YOUR_SLOT_ID_10"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
@@ -447,7 +447,7 @@
     <div class="bg-white rounded-xl shadow-lg border border-gray-200 p-3 h-16 flex items-center justify-center">
       <ins class="adsbygoogle"
            style="display:block"
-           data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+           data-ad-client="ca-pub-4786799419257268"
            data-ad-slot="YOUR_SLOT_ID_11"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
@@ -669,5 +669,6 @@
   </script>
 </body>
 </html>
+
 
 
